# autoproj

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
autoproj/: __init__.py  _projection_cpp.cpp  camera.py  config.py  factory.py  geometry.py  projection.py
autoproj/backends/: __init__.py  base.py  cpp_backend.py  cuda_backend.py  numpy_backend.py  selector.py
examples/: basic_projection.py  config_loader.py  fisheye_projection.py
tests/: test_backends.py  test_camera.py  test_config.py  test_cpp_backend.py
